--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,7 @@
     "type": "library",
     "description": "Message Google Cloud Pub/Sub Transport",
     "keywords": ["messaging", "queue", "google", "pubsub"],
-    "homepage": "https://github.com/php-enqueue/enqueue-dev",
+    "homepage": "https://enqueue.forma-pro.com/",
     "license": "MIT",
     "require": {
         "php": ">=5.6",
