--- a/composer.json
+++ b/composer.json
@@ -6,8 +6,8 @@
     "homepage": "https://enqueue.forma-pro.com/",
     "license": "MIT",
     "require": {
-        "php": ">=5.6",
-        "queue-interop/queue-interop": "^0.6@dev|^1.0.0-alpha1",
+        "php": "^7.1.3",
+        "queue-interop/queue-interop": "^0.7@dev",
         "google/cloud-pubsub": "^0.6.1"
     },
     "require-dev": {
