--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,7 @@
     "require": {
         "php": ">=5.6",
         "queue-interop/queue-interop": "^0.6@dev|^1.0.0-alpha1",
-        "google/cloud-pubsub": "^0.6.1"
+        "google/cloud-pubsub": "^0.6.1|^1.0"
     },
     "require-dev": {
         "phpunit/phpunit": "~5.4.0",
