--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,7 @@
     "license": "MIT",
     "require": {
         "php": "^7.1.3",
-        "queue-interop/queue-interop": "^0.6.2",
+        "queue-interop/queue-interop": "0.7.x-dev",
         "google/cloud-pubsub": "^0.6.1|^1.0"
     },
     "require-dev": {
