--- a/composer.json
+++ b/composer.json
@@ -7,14 +7,14 @@
     "license": "MIT",
     "require": {
         "php": "^7.1.3",
-        "queue-interop/queue-interop": "0.7.x-dev",
+        "queue-interop/queue-interop": "^0.7",
         "google/cloud-pubsub": "^1.0",
         "enqueue/dsn": "0.9.x-dev"
     },
     "require-dev": {
         "phpunit/phpunit": "~5.4.0",
         "enqueue/test": "0.9.x-dev",
-        "queue-interop/queue-spec": "0.6.x-dev"
+        "queue-interop/queue-spec": "^0.6"
     },
     "support": {
         "email": "opensource@forma-pro.com",
