--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,7 @@
         "php": "^7.1.3",
         "queue-interop/queue-interop": "^0.7",
         "google/cloud-pubsub": "^1.0",
-        "enqueue/dsn": "0.9.x-dev"
+        "enqueue/dsn": "^0.9"
     },
     "require-dev": {
         "phpunit/phpunit": "~5.4.0",
