--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,7 @@
     "license": "MIT",
     "require": {
         "php": "^7.1.3",
-        "queue-interop/queue-interop": "^0.7",
+        "queue-interop/queue-interop": "^0.7|^0.8",
         "google/cloud-pubsub": "^1.0",
         "enqueue/dsn": "^0.9"
     },
