--- a/composer.json
+++ b/composer.json
@@ -7,13 +7,13 @@
     "license": "MIT",
     "require": {
         "php": "^7.1.3",
-        "queue-interop/queue-interop": "^0.7|^0.8",
+        "queue-interop/queue-interop": "^0.8",
         "google/cloud-pubsub": "^1.0",
-        "enqueue/dsn": "^0.9"
+        "enqueue/dsn": "^0.10"
     },
     "require-dev": {
-        "phpunit/phpunit": "~5.4.0",
-        "enqueue/test": "0.9.x-dev",
+        "phpunit/phpunit": "~7.5",
+        "enqueue/test": "0.10.x-dev",
         "queue-interop/queue-spec": "^0.6"
     },
     "support": {
@@ -32,7 +32,7 @@
     "minimum-stability": "dev",
     "extra": {
         "branch-alias": {
-            "dev-master": "0.9.x-dev"
+            "dev-master": "0.10.x-dev"
         }
     }
 }
