--- a/composer.json
+++ b/composer.json
@@ -6,13 +6,13 @@
     "homepage": "https://enqueue.forma-pro.com/",
     "license": "MIT",
     "require": {
-        "php": "^7.1.3",
+        "php": "^7.3",
         "queue-interop/queue-interop": "^0.8",
         "google/cloud-pubsub": "^1.0",
         "enqueue/dsn": "^0.10"
     },
     "require-dev": {
-        "phpunit/phpunit": "~7.5",
+        "phpunit/phpunit": "^9.5",
         "enqueue/test": "0.10.x-dev",
         "queue-interop/queue-spec": "^0.6"
     },
