--- a/composer.json
+++ b/composer.json
@@ -6,10 +6,12 @@
     "homepage": "https://enqueue.forma-pro.com/",
     "license": "MIT",
     "require": {
-        "php": "^7.4|^8.0",
+        "php": "^7.3|^7.4|^8.0",
         "queue-interop/queue-interop": "^0.8",
         "google/cloud-pubsub": "^1.4.3",
-        "enqueue/dsn": "^0.10"
+        "enqueue/dsn": "^0.10",
+        "google/protobuf": "^3.25",
+        "grpc/grpc": "^1.57"
     },
     "require-dev": {
         "phpunit/phpunit": "^9.5",
