--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "ahmedkhan847/gps",
+    "name": "enque/gpsprotobuf",
     "type": "library",
     "description": "Message Google Cloud Pub/Sub Transport",
     "keywords": ["messaging", "queue", "google", "pubsub"],
