--- a/composer.json
+++ b/composer.json
@@ -1,38 +1,45 @@
 {
-    "name": "enque/gpsprotobuf",
-    "type": "library",
-    "description": "Message Google Cloud Pub/Sub Transport",
-    "keywords": ["messaging", "queue", "google", "pubsub"],
-    "homepage": "https://enqueue.forma-pro.com/",
-    "license": "MIT",
-    "require": {
-        "php": "^7.4|^8.0",
-        "queue-interop/queue-interop": "^0.8",
-        "google/cloud-pubsub": "^1.4.3",
-        "enqueue/dsn": "^0.10"
+  "name": "enqueue/gpsprotobuf",
+  "type": "library",
+  "description": "Message Google Cloud Pub/Sub Transport",
+  "keywords": [
+    "messaging",
+    "queue",
+    "google",
+    "pubsub"
+  ],
+  "homepage": "https://enqueue.forma-pro.com/",
+  "license": "MIT",
+  "require": {
+    "php": "^7.4|^8.0",
+    "queue-interop/queue-interop": "^0.8",
+    "google/cloud-pubsub": "^1.4.3",
+    "enqueue/dsn": "^0.10"
+  },
+  "require-dev": {
+    "phpunit/phpunit": "^9.5",
+    "enqueue/test": "0.10.x-dev",
+    "queue-interop/queue-spec": "^0.6.2"
+  },
+  "support": {
+    "email": "opensource@forma-pro.com",
+    "issues": "https://github.com/php-enqueue/enqueue-dev/issues",
+    "forum": "https://gitter.im/php-enqueue/Lobby",
+    "source": "https://github.com/php-enqueue/enqueue-dev",
+    "docs": "https://github.com/php-enqueue/enqueue-dev/blob/master/docs/index.md"
+  },
+  "autoload": {
+    "psr-4": {
+      "Enqueue\\Gps\\": ""
     },
-    "require-dev": {
-        "phpunit/phpunit": "^9.5",
-        "enqueue/test": "0.10.x-dev",
-        "queue-interop/queue-spec": "^0.6.2"
-    },
-    "support": {
-        "email": "opensource@forma-pro.com",
-        "issues": "https://github.com/php-enqueue/enqueue-dev/issues",
-        "forum": "https://gitter.im/php-enqueue/Lobby",
-        "source": "https://github.com/php-enqueue/enqueue-dev",
-        "docs": "https://github.com/php-enqueue/enqueue-dev/blob/master/docs/index.md"
-    },
-    "autoload": {
-        "psr-4": { "Enqueue\\Gps\\": "" },
-        "exclude-from-classmap": [
-            "/Tests/"
-        ]
-    },
-    "minimum-stability": "dev",
-    "extra": {
-        "branch-alias": {
-            "dev-master": "0.10.x-dev"
-        }
+    "exclude-from-classmap": [
+      "/Tests/"
+    ]
+  },
+  "minimum-stability": "dev",
+  "extra": {
+    "branch-alias": {
+      "dev-master": "0.10.x-dev"
     }
+  }
 }
