--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-  "name": "enqueues/gpsprotobuf",
+  "name": "enqueue/gps",
   "type": "library",
   "description": "Message Google Cloud Pub/Sub Transport",
   "keywords": [
@@ -11,7 +11,7 @@
   "homepage": "https://enqueue.forma-pro.com/",
   "license": "MIT",
   "require": {
-    "php": "^7.4|^8.0",
+    "php": "^7.3|^7.4|^8.0",
     "queue-interop/queue-interop": "^0.8",
     "google/cloud-pubsub": "^1.4.3",
     "enqueue/dsn": "^0.10"
