--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,7 @@
     "require": {
         "php": "^7.4|^8.0",
         "queue-interop/queue-interop": "^0.8",
-        "google/cloud-pubsub": "^2.0",
+        "google/cloud-pubsub": "^1.51|^2.0",
         "enqueue/dsn": "^0.10"
     },
     "require-dev": {
