--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,7 @@
     "homepage": "https://enqueue.forma-pro.com/",
     "license": "MIT",
     "require": {
-        "php": "^7.4|^8.0",
+        "php": "^8.1",
         "queue-interop/queue-interop": "^0.8",
         "google/cloud-pubsub": "^1.4.3",
         "enqueue/dsn": "^0.10"
